crates/pg_syntax/tests/snapshots/postgres_regress/text@44.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select format('%*0$s', 'Hello');"
---
SelectStmt@0..32
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..30
    FuncCall@7..30
      Ident@7..13 "format"
      Ascii40@13..14 "("
      AConst@14..21
        Sconst@14..21 "'%*0$s'"
      Ascii44@21..22 ","
      Whitespace@22..23 " "
      AConst@23..30
        Sconst@23..30 "'Hello'"
  Ascii41@30..31 ")"
  Ascii59@31..32 ";"

