crates/pg_syntax/tests/snapshots/postgres_regress/text@45.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select format('%1$', 1);"
---
SelectStmt@0..24
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..22
    FuncCall@7..22
      Ident@7..13 "format"
      Ascii40@13..14 "("
      AConst@14..19
        Sconst@14..19 "'%1$'"
      Ascii44@19..20 ","
      Whitespace@20..21 " "
      AConst@21..22
        Iconst@21..22 "1"
  Ascii41@22..23 ")"
  Ascii59@23..24 ";"

