crates/pg_syntax/tests/snapshots/postgres_regress/text@46.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select format('%1$1', 1);"
---
SelectStmt@0..25
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..23
    FuncCall@7..23
      Ident@7..13 "format"
      Ascii40@13..14 "("
      AConst@14..20
        Sconst@14..20 "'%1$1'"
      Ascii44@20..21 ","
      Whitespace@21..22 " "
      AConst@22..23
        Iconst@22..23 "1"
  Ascii41@23..24 ")"
  Ascii59@24..25 ";"

