crates/pg_syntax/tests/snapshots/postgres_regress/text@48.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select format('Hello %s %s, %2$s %2$s', 'World', 'Hello again');"
---
SelectStmt@0..64
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..62
    FuncCall@7..62
      Ident@7..13 "format"
      Ascii40@13..14 "("
      AConst@14..38
        Sconst@14..38 "'Hello %s %s, %2$s %2$s'"
      Ascii44@38..39 ","
      Whitespace@39..40 " "
      AConst@40..47
        Sconst@40..47 "'World'"
      Ascii44@47..48 ","
      Whitespace@48..49 " "
      AConst@49..62
        Sconst@49..62 "'Hello again'"
  Ascii41@62..63 ")"
  Ascii59@63..64 ";"

