crates/pg_syntax/tests/snapshots/postgres_regress/text@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select 'four: ' || 2+2;"
---
SelectStmt@0..23
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..22
    AExpr@7..22
      AConst@7..15
        Sconst@7..15 "'four: '"
      Whitespace@15..16 " "
      Op@16..18 "||"
      Whitespace@18..19 " "
      AExpr@19..22
        AConst@19..20
          Iconst@19..20 "2"
        Ascii43@20..21 "+"
        AConst@21..22
          Iconst@21..22 "2"
  Ascii59@22..23 ";"

