crates/pg_syntax/tests/snapshots/postgres_regress/text@61.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select format('>>%-10s<<', 'Hello');"
---
SelectStmt@0..36
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..34
    FuncCall@7..34
      Ident@7..13 "format"
      Ascii40@13..14 "("
      AConst@14..25
        Sconst@14..25 "'>>%-10s<<'"
      Ascii44@25..26 ","
      Whitespace@26..27 " "
      AConst@27..34
        Sconst@27..34 "'Hello'"
  Ascii41@34..35 ")"
  Ascii59@35..36 ";"

