crates/pg_syntax/tests/snapshots/postgres_regress/text@62.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select format('>>%-10s<<', NULL);"
---
SelectStmt@0..33
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..31
    FuncCall@7..31
      Ident@7..13 "format"
      Ascii40@13..14 "("
      AConst@14..25
        Sconst@14..25 "'>>%-10s<<'"
      Ascii44@25..26 ","
      Whitespace@26..27 " "
      AConst@27..31
        NullP@27..31 "NULL"
  Ascii41@31..32 ")"
  Ascii59@32..33 ";"

