crates/pg_syntax/tests/snapshots/postgres_regress/text@63.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select format('>>%1$10s<<', 'Hello');"
---
SelectStmt@0..37
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..35
    FuncCall@7..35
      Ident@7..13 "format"
      Ascii40@13..14 "("
      AConst@14..26
        Sconst@14..26 "'>>%1$10s<<'"
      Ascii44@26..27 ","
      Whitespace@27..28 " "
      AConst@28..35
        Sconst@28..35 "'Hello'"
  Ascii41@35..36 ")"
  Ascii59@36..37 ";"

